arranco mi proyecto real

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,18 +1,20 @@
-<!doctype html>
- <html>
- <head>
 
-   <head>
-      <meta charset="utf-8"/>
-      <title>Título del post</title>    
-   </head>
+ <html>
+	 <head>
+
+   
+       
+              <title>Título del post</title>
+		<link rel="stylesheet" href="css/estilos.css"/>    
+
+         </head>
   
 
 
-   <body>
-	 <h1>aqui vamos hacer un blog</h1>
-         <p>y este el parrafo de incio</p>
-   </body>
+          <body>
+	      <h1>aqui vamos hacer un blog</h1>
+              <p>y este el parrafo de incio</p>
+         </body>
   
 
  </html>
