commit al master de blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,8 +12,13 @@
 
 
           <body>
-	      <h1>aqui vamos hacer un blog</h1>
-              <p>y este el parrafo de incio</p>
+	    
+		<div id="container">
+			<div id="post">
+                             <h1>este titulo es algo atractivo</h1>
+                             <p>y este el parrafo es atractivo</p>
+		</div>
+	
          </body>
   
 
