--- a/blogpost.html
+++ b/blogpost.html
@@ -14,9 +14,13 @@
           <body>
 	    
 		<div id="container">
+			<div id="cabecera">
+			cabecera
+			</div>	
 			<div id="post">
                              <h1>este titulo es algo atractivo</h1>
                              <p>y este el parrafo es atractivo</p>
+			</div>
 		</div>
 	
          </body>
