agregando estilos a branch cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,8 @@
 	    
 		<div id="container">
 			<div id="cabecera">
-			cabecera
+			hyperblog  <span id="tagline"> tu blog de confianza </span>
+
 			</div>	
 			<div id="post">
                              <h1>este titulo es algo atractivo</h1>
