--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
 			<div id="post">
                              <h1>este titulo es algo atractivo</h1>
                              <p>y este el parrafo es atractivo</p>
+				<p> este es otro parrafo atractivo </p>
 		</div>
 	
          </body>
