modifique la cabcerar

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
 	    
 		<div id="container">
 			<div id="cabecera">
-			hyperblog  <span id="tagline"> tu blog de confianza </span>
+			hyperblog  <span id="tagline"> mi blog cabecera </span>
 
 			</div>	
 			<div id="post">
