--- a/blogpost.html
+++ b/blogpost.html
@@ -22,7 +22,7 @@
 
 			</div>	
 			<div id="post">
-                             <h1>este titulo es algo atractivo</h1>
+                             <h1>este titulo es algo atractivo3</h1>
                              <p>y este el parrafo es atractivo subcribete y dale like</p>
 
 			</div>
