--- a/blogpost.html
+++ b/blogpost.html
@@ -23,8 +23,8 @@
 			</div>	
 			<div id="post">
                              <h1>este titulo es algo atractivo5</h1>
-                             <p>y este el parrafo es atractivo subcribete y dale like</p>
-
+                             <p>y este el parrafo es atractivo subcribete y dal like</p>
+				<p>por que puedo </p>
 			</div>
 
 		</div>
