--- a/blogpost.html
+++ b/blogpost.html
@@ -15,8 +15,8 @@
 	    
 		<div id="container">
 			<div id="cabecera">
-
-			hyperblog  <span id="tagline"> tu blog maestro2 </span>
+                                hyperblog
+		        <span id="tagline"> tu blog maestro2 </span>
 
 		
 
@@ -26,6 +26,10 @@
                              <p>y este el parrafo es atractivo subcribete y dale like</p>
 
 			</div>
+                        
+                       <div id="footer">
+                                   Datascientis miguel oscco
+                       </div>
 
 		</div>
 	
