--- a/blogpost.html
+++ b/blogpost.html
@@ -28,7 +28,7 @@
 			</div>
                         
                        <div id="footer">
-                                   Datascientis miguel oscco
+                                   Datascientis miguel osccov2
                        </div>
 
 		</div>
