--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
 
    
        
-              <title>Título del post</title>
+              <title>Título del post fix-type</title>
 		<link rel="stylesheet" href="css/estilos.css"/>    
 
          </head>
