--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
    
        
 
-              <title>Título del post forkedv5</title>
+              <title>Título del post forkedv5v6</title>
 
 		<link rel="stylesheet" href="css/estilos.css"/>    
 
