cambio titulo y color

--- a/blogpost.html
+++ b/blogpost.html
@@ -30,7 +30,7 @@
 			</div>
                         
                        <div id="footer">
-                                   Datascientis miguel osccov2
+                                   Datascientis miguel osccov2v5
                        </div>
 
 		</div>
