--- a/blogpost.html
+++ b/blogpost.html
@@ -30,7 +30,7 @@
 			</div>
                         
                        <div id="footer">
-                                   Datascientis miguel osccov2v5
+                                   Datascientis miguel osccov2v5v7
                        </div>
 
 		</div>
